<resources>
    <string name="app_name">Smart Reminder</string>
    <string name="login">Login</string>
    <string name="smart_reminder">Smart Reminder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="reminder1">Haircut</string>
    <string name="reminder2">Meeting</string>
    <string name="add_a_new_reminder">Add a new reminder</string>
    <string name="set_date">Set date</string>
    <string name="reminder_message">Reminder Message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_reminder">Update reminder</string>
    <string name="set_time">Set time</string>
    <string name="message">Message</string>
    <string name="_30_05_1997">30.05.1997</string>
    <string name="_18_30">18:30</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>

    <!-- Notification string resources -->
    <string name="notification_title">Smart Reminder</string>
    <string name="reminder_notification_channel_id">reminder_channel</string>
    <string name="reminder_notification_channel_name">Reminders</string>
    <string name="notification_message">You have a reminder</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="all_reminders">All reminders</string>
    <string name="set_a_notification">Set a notification</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_location">Confirm location</string>
    <string name="set_location">Set location</string>
</resources>